tests/e2e/invalid_return_type.story
function foo returns list
    return ""
